2008-07-26  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.24.modules: Added option
	--enable-threadsafe to sqlite3. Better rebuild this module
	using the -a jhbuild switch to enable the thread-safe.

2008-07-26  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/versioncontrol/bzr.py: Have a default checkoutdir for
	bzr branches

2008-07-26  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/buildbot.modules: Add moduleset to ease deployment 
	of buildslaves

2008-07-25  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-suites-2.22.modules: Use the glibmm-2-16 branch 
	for glibmm.

2008-07-24  James Sharpe  <jsharpe@svn.gnome.org>

	* modulesets/gnome-suites-2.24.modules: gnome-settings-daemon no
	longer requires libgnomeui.
	
2008-07-24  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: Added clutter-cairomm, clutter-gtkmm, 
	clutter-box2dmm, and clutter-box2d.

2008-07-24  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.24.modules: added "sqlite3" module,
	fetching and compiling sqlite-3.5.9 (latest stable available), and
	use it as dependance for "mono" and "mozilla" modules
	
	* modulesets/gnome-2.24.modules: added "sqlite3" dep to "tracker",
	"beagle" and "WebKit" modules
	
	* modulesets/gnome-suites-2.24.modules: added "sqlite3" deps to 
	"evolution-data-server" module; added "hal" to "gnome-keyring" module.

2008-07-24  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules: don't force soup backend for
	WebKit, not yet ready for real use.
	See http://bugzilla.gnome.org/show_bug.cgi?id=512827#c26

2008-07-23  James Sharpe  <jsharpe@svn.gnome.org>

	* modulesets/gnome-suites-2.24.modules: corrected deps for 
	gnome-screensaver.
	
2008-07-22  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated shared-mime-info
	to 0.50.

2008-07-22  Wouter Bolsterlee  <wbolster@svn.gnome.org>
