@@ -1,3 +1,9 @@
+2008-07-28  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/config.py: add C_INCLUDE_DIR back and also set LDFLAGS, they
+	are required for autoconf configure scripts to find some modules that
+	do not use pkg-config.  (closes: #545018, #377724)
+
 2008-07-26  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/gnome-external-deps-2.24.modules: Added option
